--- a/mywebserver.yml
+++ b/mywebserver.yml
@@ -7,10 +7,10 @@
     apt:
       name: apache2
       state: present
-    when "ansible_os_family": "Debian"
+    when: ansible_os_family == "Debian"
   
   - name: I want to run apache2 in ansible ubantu node 
     service: 
       name: apache2
       state: started
-    when "ansible_os_family": "Debian"
+    when: ansible_os_family == "Debian"
